--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,12 +14,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #smtp mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=hussain.shahzad250@gmail.com
-spring.mail.password=orwraaddzcctrjsk
+spring.mail.password=********
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
