--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.hibernate.ddl-auto=update
 #smtp mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hussain.shahzad250@gmail.com
-spring.mail.password=********
+spring.mail.username=your_email_address
+spring.mail.password=your_password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
